fix: correct horizontal scroll, disable anims on mobile, increase gutter

--- a/scss/modules/screenshots.scss
+++ b/scss/modules/screenshots.scss
@@ -1,4 +1,6 @@
 section.screenshots {
+  overflow: hidden;
+
   article {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
